[gd_scene format=3 uid="uid://dmbqtolc4p07q"]

[ext_resource type="Script" uid="uid://dpo4d5os16tm5" path="res://scripts/ui/character_overlay_screen.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/NavButton.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://18u6y0h0gaqi" path="res://assets/fonts/PixeligCursief.ttf" id="3"]
[ext_resource type="FontFile" uid="uid://18u6y0h0gaqi" path="res://assets/fonts/PixeligCursief.ttf" id="4_kroc1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.74902, 0.74902, 0.74902, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Character" type="Control" unique_id=977053152]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="." unique_id=1766393643]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.254902, 0.254902, 1)

[node name="Layout" type="MarginContainer" parent="." unique_id=2083064626]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 8.0
offset_right = -18.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Layout" unique_id=780482433]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="Layout/VBox" unique_id=54220628]
layout_mode = 2

[node name="BackButton" parent="Layout/VBox/Header" unique_id=1594362762 instance=ExtResource("2")]
custom_minimum_size = Vector2(72, 28)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "BACK"

[node name="Title" type="Label" parent="Layout/VBox/Header" unique_id=921904164]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_kroc1")
theme_override_font_sizes/font_size = 34
text = "CHARACTER"
horizontal_alignment = 1

[node name="HeaderSpacer" type="Control" parent="Layout/VBox/Header" unique_id=576445676]
custom_minimum_size = Vector2(72, 28)
layout_mode = 2

[node name="Tabs" type="HBoxContainer" parent="Layout/VBox" unique_id=898707190]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="AbilitiesButton" parent="Layout/VBox/Tabs" unique_id=142780281 instance=ExtResource("2")]
custom_minimum_size = Vector2(110, 26)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "ABILITIES"

[node name="AmuletsButton" parent="Layout/VBox/Tabs" unique_id=791434043 instance=ExtResource("2")]
custom_minimum_size = Vector2(110, 26)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "AMULETS"

[node name="WeaponsButton" parent="Layout/VBox/Tabs" unique_id=1310080457 instance=ExtResource("2")]
custom_minimum_size = Vector2(110, 26)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "WEAPONS"

[node name="ContentPanel" type="Panel" parent="Layout/VBox" unique_id=1951244827]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("1")

[node name="Content" type="Control" parent="Layout/VBox/ContentPanel" unique_id=1013787036]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
